# swc-plugin-fix-decorator-metadata-cov

./: .npmignore  Cargo.toml  package-lock.json  package.json
src/: lib.rs
