[package]
name = "swc-plugin-fix-decorator-metadata-cov"
version = "0.1.0"
edition = "2021"
categories = ["compilers"]
keywords = ["jest","swc","nestjs","coverage","decorator","metadata"]
description = "test"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
